# GolfEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Doxygen/: Doxyfile
Doxygen/html/: _a_star_pathfinding_service_8h_source.html  _action_8h_source.html  _action_map_8h_source.html  _alignment_8h_source.html  _animation_8h_source.html  _animator_8h_source.html  _audio_service_8h_source.html  _audio_singleton_8h_source.html  _audio_source_8h_source.html  _behaviour_script_8h_source.html  _box2_d_collision_listener_8h_source.html  _box2_d_physics_service_8h_source.html  _box_collider_8h_source.html  _button_8h_source.html  _button_render_shape_8h_source.html  _camera_8h_source.html  _circle_collider_8h_source.html  _circle_render_shape_8h_source.html  _collider_8h_source.html  _color_8h_source.html  _component_8h_source.html  _drawable_8h_source.html  _game_loop_8h_source.html  _game_object_8h_source.html  _graph_8h_source.html  _graph_render_shape_8h_source.html  _i_o_8h_source.html  _i_persistable_8h_source.html  _i_scene_factory_8h_source.html  _input_key_8h_source.html  _input_service_8h_source.html  _input_singleton_8h_source.html  _line_render_shape_8h_source.html  _math_8h_source.html  _node_8h_source.html  _particle_8h_source.html  _particle_system_8h_source.html  _pathfinding_8h_source.html  _pathfinding_service_8h_source.html  _pathfinding_singleton_8h_source.html  (+339 more)
Doxygen/latex/: _a_star_pathfinding_service_8h_source.tex  _action_8h_source.tex  _action_map_8h_source.tex  _alignment_8h_source.tex  _animation_8h_source.tex  _animator_8h_source.tex  _audio_service_8h_source.tex  _audio_singleton_8h_source.tex  _audio_source_8h_source.tex  _behaviour_script_8h_source.tex  _box2_d_collision_listener_8h_source.tex  _box2_d_physics_service_8h_source.tex  _box_collider_8h_source.tex  _button_8h_source.tex  _camera_8h_source.tex  (+268 more)
game/: CMakeLists.txt  main.cpp
game/gameobjects/: BloodSplatterParticleEffect.cpp  BloodSplatterParticleEffect.h  EnemyObject.cpp  EnemyObject.h  FinishLevelAreaObject.cpp  FinishLevelAreaObject.h  GameManager.cpp  GameManager.h  HUD.cpp  HUD.h  PhysicGameObject.cpp  PhysicGameObject.h  Player.cpp  Player.h  PlayerObject.cpp  PlayerObject.h  Projectile.cpp  Projectile.h  ProjectilePoolObject.cpp  ProjectilePoolObject.h  TestBlock.cpp  TestBlock.h  Wall.cpp  Wall.h
game/res/: README.txt
game/res/tilesets/: Hotline-Miami-TileSet.tsx  Level1.tmx  Level2.tmx  Level3.tmx
game/scenes/: KeyConfigScene.cpp  KeyConfigScene.h  Level1Scene.cpp  Level1Scene.h  Level2Scene.cpp  Level2Scene.h  Level3Scene.cpp  Level3Scene.h  MainMenuScene.cpp  MainMenuScene.h  PlayerTestScene.cpp  PlayerTestScene.h  SaveGameTestScene.cpp  SaveGameTestScene.h  SelectLevelScene.cpp  SelectLevelScene.h  SettingsScene.cpp  SettingsScene.h  YouWonScene.cpp  YouWonScene.h
game/scripts/: EnemyCollisionScript.cpp  EnemyCollisionScript.h  EnemyMovementScript.cpp  EnemyMovementScript.h  ExitButtonScript.cpp  ExitButtonScript.h  FullScreenButtonScript.cpp  FullScreenButtonScript.h  GameManagerScript.cpp  GameManagerScript.h  HUDScript.cpp  HUDScript.h  KeyConfigButtonScript.cpp  KeyConfigButtonScript.h  MasterVolumeButtonScript.cpp  MasterVolumeButtonScript.h  MusicVolumeButtonScript.h  PlayerCollisionScript.cpp  PlayerCollisionScript.h  PlayerMovementScript.cpp  PlayerMovementScript.h  PlayerShootScript.cpp  PlayerShootScript.h  ProjectilePoolScript.cpp  ProjectilePoolScript.h  ProjectileScript.cpp  ProjectileScript.h  SaveGameTestScript.cpp  SaveGameTestScript.h  SaveStateScript.cpp  SaveStateScript.h  SelectLevelButtonScript.h  SoundEffectVolumeButtonScript.cpp  SoundEffectVolumeButtonScript.h  StartGameButtonScript.cpp  VolumeButtonScript.cpp  VolumeButtonScript.h  VolumeTextUpdateScript.cpp  VolumeTextUpdateScript.h
game/scripts/MenuScripts/: BackButtonScript.cpp  BackButtonScript.h  ExitButtonScript.cpp  ExitButtonScript.h  FullScreenButtonScript.cpp  FullScreenButtonScript.h  KeyConfigButtonScript.cpp  KeyConfigButtonScript.h  MasterVolumeButtonScript.cpp  MasterVolumeButtonScript.h  MusicVolumeButtonScript.cpp  MusicVolumeButtonScript.h  SelectLevelButtonScript.cpp  SelectLevelButtonScript.h  SettingsButtonScript.cpp  SettingsButtonScript.h  SoundEffectVolumeButtonScript.cpp  SoundEffectVolumeButtonScript.h  StartGameButtonScript.cpp  StartGameButtonScript.h  TextUpdateScript.cpp  TextUpdateScript.h
game/scripts/SaveGameTestScripts/: SaveGameTestScript.cpp  SaveGameTestScript.h  ShotCounterScript.cpp  ShotCounterScript.h
game/tiledFiles/: Hotline-Miami-TileSet.tsx  Level2.tmx
game/utils/: GameActions.h  GameSettings.h
tests/: CMakeLists.txt  LibSDL2ImageTests.cpp  LibSDL2MixerTests.cpp  LibSDL2Tests.cpp  SampleTests.cpp  SceneManagerTests.cpp  SceneTests.cpp  libSDL2TtfTest.cpp  main.cpp
tests/Core/: GameLoopTests.cpp  ProjectSettingsTests.cpp
tests/Scene/: GameObjectTests.cpp  PersistableTests.cpp  SceneTests.cpp
tests/Scene/Components/: AudioSourceTests.cpp
tests/Services/: Box2DPhysicsService.cpp
tests/Utilities/: IOTests.cpp  Random.cpp  RandomTests.cpp
validation/US00_AllServices/: CMakeLists.txt  MovementScript.cpp  MovementScript.h  SceneFactory.cpp  SceneFactory.h  SpriteDrawable.cpp  SpriteDrawable.h  main.cpp
validation/US00_Camera/: CMakeLists.txt  main.cpp
validation/US00_Camera/res/: map.tmx
validation/US00_Rendering/: CMakeLists.txt  CircleDrawable.cpp  CircleDrawable.h  LineDrawable.cpp  LineDrawable.h  RectDrawable.cpp  RectDrawable.h  SpriteDrawable.cpp  SpriteDrawable.h  main.cpp
validation/US04_RenderFPS/: CMakeLists.txt  TextDrawable.cpp  TextDrawable.h  main.cpp
validation/US09_Animations/: CMakeLists.txt  SceneFactory.cpp  SceneFactory.h  ZombieScript.cpp  ZombieScript.h  main.cpp
validation/US12_AudioService/: CMakeLists.txt  main.cpp
validation/US12_AudioService/resources/: gun-cocking-01.opus
validation/US13_AIObjects/: CMakeLists.txt  CreateGraph.cpp  CreateGraph.h  DrawPathScript.cpp  DrawPathScript.h  Graph.cpp  Graph.h  MovementScript.cpp  MovementScript.h  SceneFactory.cpp  SceneFactory.h  main.cpp
(+237 files in other folders)
